Toolbar hinzugefügt + Routenbereich scrollbar
Die bisherigen Buttons wurden durch Icons ersetzt und in eine Toolbar geschoben. Der Routenbereich ist durch Flexbox nun scrollbar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 	<body>
 		<aside>
 			<section id="flags">
-				<form name="search">
-					<input type="search" id="usersearch" placeholder="Nach Routen eines Benutzers suchen" />
-				</form>
+				<section id="toolbar">
+					<button title="Route oder Punkt hinzufügen">+</button>
+					<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
+					<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
+					<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
+					<button title="Suchen" class="rightside"><img src="images/search.svg" alt="Suchen" height="15" /></button>
+				</section>
 				<h1>Strecken</h1>
 				<ul id="routes">
 					<li>Bla</li>
@@ -24,9 +28,6 @@
 					<li>Fasel</li>
 					<li>Blubber</li>
 				</ul>
-				<button>Exportieren</button>
-				<button>Importieren</button>
-				<button>Speichern</button>
 			</section>
 			<form id="viewpreferences" name="viewpreferences">
 				<ul id="choosemap">
