--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Die Karte</title>
-		<link rel="stylesheet" href="main.css" />
-		<script type="application/javascript" src="map.js"></script>
+		<link rel="stylesheet" href="styles/main.css" />
+		<script type="application/javascript" src="scripts/map.js"></script>
 		<meta charset="utf-8" />
 	</head>
 	<body>
