--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
 					<li class="active">Ansicht 2</li>
 					<li>Ansicht 3</li>	
 				</ul>
-				<fieldset>
+				<fieldset id="wurschd">
 					<legend>Sichtbarkeiten</legend>
-					<input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label>
-					<input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label>
+					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
+					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
+					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
+					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
+					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
+					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
+					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
+					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
 				</fieldset>
 				<fieldset>
 					<legend>Ansichten</legend>
