--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 	<body>
 		<aside>
 			<section id="flags">
-				<section id="toolbar">
-					<button title="Route oder Punkt hinzufügen">+</button>
-					<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
-					<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
-					<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
-					<button title="Suchen" class="rightside"><img src="images/search.svg" alt="Suchen" height="15" /></button>
-				</section>
+				<nav id="toolbar">
+					<button title="Route oder Punkt hinzufügen"><img src="images/add.svg" alt="Route oder Punkt hinzufügen" height="15" /></button>
+					<section class="group">
+						<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
+						<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
+						<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
+						<button title="Suchen" class="rightside" id="searchbutton" onclick="this.parentNode.parentNode.className='searchenabled'; document.getElementById('searchflags').focus();"><img src="images/search.svg" alt="Suchen" height="15" /></button>
+					</section>
+					<input type="search" name="searchflags" id="searchflags" placeholder="Suchen" />
+				</nav>
 				<h1>Strecken</h1>
 				<ul id="routes">
 					<li>Bla</li>
