Unterstützung von Gewässern VORBEREITET!

--- a/backend/transformation/steffen/svg.html
+++ b/backend/transformation/steffen/svg.html
@@ -4,7 +4,6 @@
 </head>
 <body>
 	<h3>Verfuegbare SVGs</h3>
-	<br>
 	<ul>
 		<li><a href="./php/transform.php?l=c">Cities</a>
 		<li><a href="./php/transform.php?l=c1">Cities, Towns</a>
@@ -25,7 +24,7 @@
 				Baden-Wuerttemberg</a>
 	</ul>
 	<br>
-	<br> (__Name bedeutet, dass die Transformation noch nicht
+	<br> ("__Name" bedeutet, dass die Transformation noch nicht
 	funktionsfaehig ist (i.d.R. da XML noch zu gross))
 </body>
 </html>
