--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 						<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
 						<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
 						<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
-						<button title="Suchen" class="rightside" id="searchbutton" onclick="this.parentNode.parentNode.className='searchenabled'; document.getElementById('searchflags').focus();"><img src="images/search.svg" alt="Suchen" height="15" /></button>
+						<button title="Suchen" class="rightside" id="searchbutton"><img src="images/search.svg" alt="Suchen" height="15" /></button>
 					</section>
-					<input type="search" name="searchflags" id="searchflags" placeholder="Suchen" />
+					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
 				</nav>
 				<h1>Strecken</h1>
 				<ul id="routes">
