Verbesserte Scrollbarkeit der Routenliste + Korrektur fehlerhafter Abstände mancher UI-Elementen
Ist die Liste der Routen/Orte größer als der zur Verfügung stehenden Anzeigefläche, wird nur noch die Liste scrollbar; die Toolbar bleibt damit fest auf dem Bildschirm.

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 					</section>
 					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
 				</nav>
-				<h1>Strecken</h1>
-				<ul id="routes">
-					<li>Bla</li>
-					<li>Fasel</li>
-					<li>Blubber</li>
-				</ul>
-				<h1>Orte</h1>
-				<ul id="places">
-					<li>Bla</li>
-					<li>Fasel</li>
-					<li>Blubber</li>
-				</ul>
+				<div class="container">
+					<h1>Strecken</h1>
+					<ul id="routes">
+						<li>Bla</li>
+						<li>Fasel</li>
+						<li>Blubber</li>
+					</ul>
+					<h1>Orte</h1>
+					<ul id="places">
+						<li>Bla</li>
+						<li>Fasel</li>
+						<li>Blubber</li>
+					</ul>
+				</div>
 			</section>
 			<form id="viewpreferences" name="viewpreferences">
 				<ul id="choosemap">
