--- a/backend/transformation/steffen/svg.html
+++ b/backend/transformation/steffen/svg.html
@@ -1,9 +1,14 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 <title>SVGs</title>
+<meta charset="UTF-8">
+<meta http-equiv="expires" content="0">
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="pragma" content="no-cache">
 </head>
 <body>
-	<h3>Verfuegbare SVGs</h3>
+	<h3>Verfügbare SVGs</h3>
 	<ul>
 		<li><a href="./php/transform.php?l=c">Cities</a>
 		<li><a href="./php/transform.php?l=c1">Cities, Towns</a>
@@ -13,18 +18,18 @@
 				Villages, Hamlets, Suburbs</a>
 	</ul>
 	<ul>
-		<li><a href="./php/transform.php?l=m">__Motorways</a>
+		<li><a href="./php/transform.php?l=m">#_Motorways</a>
 	</ul>
 	<ul>
-		<li><a href="./php/transform.php?l=r">__Rivers</a>
+		<li><a href="./php/transform.php?l=r">#_Rivers</a>
 	</ul>
 	<ul>
 		<li><a href="./php/transform.php?l=b">Boundary Germany</a>
-		<li><a href="./php/transform.php?l=b1">__Boundary
-				Baden-Wuerttemberg</a>
+		<li><a href="./php/transform.php?l=b1">Boundary
+				Baden-Württemberg</a>
 	</ul>
 	<br>
-	<br> ("__Name" bedeutet, dass die Transformation noch nicht
-	funktionsfaehig ist (i.d.R. da XML noch zu gross))
+	<br> ("#_Name" bedeutet, dass die Transformation noch nicht
+	funktionsfähig ist (i.d.R. da XML noch zu groß))
 </body>
 </html>
