--- a/backend/transformation/steffen/svg.html
+++ b/backend/transformation/steffen/svg.html
@@ -6,30 +6,58 @@
 <meta http-equiv="expires" content="0">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="pragma" content="no-cache">
+<style type="text/css">
+table {
+	width: 70%;
+}
+</style>
 </head>
 <body>
-	<h3>Verfügbare SVGs</h3>
-	<ul>
-		<li><a href="./php/transform.php?l=c">Cities</a>
-		<li><a href="./php/transform.php?l=c1">Cities, Towns</a>
-		<li><a href="./php/transform.php?l=c2">Cities, Towns,
-				Villages</a>
-		<li><a href="./php/transform.php?l=c3">Cities, Towns,
-				Villages, Hamlets, Suburbs</a>
-	</ul>
-	<ul>
-		<li><a href="./php/transform.php?l=m">#_Motorways</a>
-	</ul>
-	<ul>
-		<li><a href="./php/transform.php?l=r">#_Rivers</a>
-	</ul>
-	<ul>
-		<li><a href="./php/transform.php?l=b">Boundary Germany</a>
-		<li><a href="./php/transform.php?l=b1">Boundary
-				Baden-Württemberg</a>
-	</ul>
-	<br>
-	<br> ("#_Name" bedeutet, dass die Transformation noch nicht
-	funktionsfähig ist (i.d.R. da XML noch zu groß))
+	<h1>Verfügbare SVGs</h1>
+	<table>
+		<tr>
+			<td><h3>Live transformiert</h3></td>
+			<td><h3>Vorgefertigt</h3></td>
+		</tr>
+		<tr>
+			<td>
+				<ul>
+					<li><a href="./php/transform.php?l=c">Cities</a>
+					<li><a href="./php/transform.php?l=c1">Towns</a>
+					<li><a href="./php/transform.php?l=c2">Villages</a>
+					<li><a href="./php/transform.php?l=c3">Hamlets</a>
+					<li><a href="./php/transform.php?l=c4">Suburbs</a>
+				</ul>
+				<ul>
+					<li><a href="./php/transform.php?l=b">Boundary Ba-Wü</a>
+				</ul>
+				<ul>
+					<li><a href="./php/transform.php?l=m">Motorways</a>
+				</ul>
+				<ul>
+					<li><a href="./php/transform.php?l=r">Rivers</a>
+				</ul>
+			</td>
+			<td>
+				<ul>
+					<li><a href="./svg/cities/cities.svg">Cities</a>
+					<li><a href="./svg/cities/towns.svg">Towns</a>
+					<li><a href="./svg/cities/villages.svg">Villages</a>
+					<li><a href="./svg/cities/hamlets.svg">Hamlets</a>
+					<li><a href="./svg/cities/suburbs.svg">Suburbs</a>
+				</ul>
+				<ul>
+					<li><a href="./svg/bounds/bawubounds.svg">Boundary Ba-Wü</a>
+				</ul>
+				<ul>
+					<li><a href="./svg/highways/motorways.svg">Motorways</a>
+				</ul>
+				<ul>
+					<li><a href="./svg/waters/rivers.svg">Rivers</a>
+				</ul>
+
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
