Finale Anpassungen für den neuen Server

--- a/svg.html
+++ b/svg.html
@@ -22,38 +22,38 @@ table {
 		<tr>
 			<td>
 				<ul>
-					<li><a href="./php/transform.php?l=c">Cities</a>
-					<li><a href="./php/transform.php?l=c1">Towns</a>
-					<li><a href="./php/transform.php?l=c2">Villages</a>
-					<li><a href="./php/transform.php?l=c3">Hamlets</a>
-					<li><a href="./php/transform.php?l=c4">Suburbs</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=c">Cities</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=c1">Towns</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=c2">Villages</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=c3">Hamlets</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=c4">Suburbs</a>
 				</ul>
 				<ul>
-					<li><a href="./php/transform.php?l=b">Boundary Ba-Wü</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=b">Boundary Ba-Wü</a>
 				</ul>
 				<ul>
-					<li><a href="./php/transform.php?l=m">Motorways</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=m">Motorways</a>
 				</ul>
 				<ul>
-					<li><a href="./php/transform.php?l=r">Rivers</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=r">Rivers</a>
 				</ul>
 			</td>
 			<td>
 				<ul>
-					<li><a href="./svg/cities/cities.svg">Cities</a>
-					<li><a href="./svg/cities/towns.svg">Towns</a>
-					<li><a href="./svg/cities/villages.svg">Villages</a>
-					<li><a href="./svg/cities/hamlets.svg">Hamlets</a>
-					<li><a href="./svg/cities/suburbs.svg">Suburbs</a>
+					<li><a href="./backend/svgs/cities/cities.svg">Cities</a>
+					<li><a href="./backend/svgs/cities/towns.svg">Towns</a>
+					<li><a href="./backend/svgs/cities/villages.svg">Villages</a>
+					<li><a href="./backend/svgs/cities/hamlets.svg">Hamlets</a>
+					<li><a href="./backend/svgs/cities/suburbs.svg">Suburbs</a>
 				</ul>
 				<ul>
-					<li><a href="./svg/bounds/bawubounds.svg">Boundary Ba-Wü</a>
+					<li><a href="./backend/svgs/bounds/bawubounds.svg">Boundary Ba-Wü</a>
 				</ul>
 				<ul>
-					<li><a href="./svg/highways/motorways.svg">Motorways</a>
+					<li><a href="./backend/svgs/streets/motorways.svg">Motorways</a>
 				</ul>
 				<ul>
-					<li><a href="./svg/waters/rivers.svg">Rivers</a>
+					<li><a href="./backend/svgs/waters/rivers.svg">Rivers</a>
 				</ul>
 
 			</td>
