--- a/index.html
+++ b/index.html
@@ -51,12 +51,23 @@
 					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
 					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
 				</fieldset>
-				<fieldset>
-					<legend>Ansichten</legend>
-					<input type="range" name="zoomlevel" min="0" max="10" step="0.1" />
-					<input type="image" name="da-muss-noch-ein-guter-name-rein" src="http://placekitten.com/20/20" />
+				<section>
+					<svg width="102" height="16" id="mapscale">
+						<title>Maßstab</title>
+						<rect x="0" y="7" width="102" height="2"></rect>
+						<rect x="0" y="0" width="2" height="16"></rect>
+						<rect x="26" y="4" width="2" height="8" class="scalable"></rect>
+						<rect x="51" y="4" width="2" height="8" class="scalable"></rect>
+						<rect x="76" y="4" width="2" height="8" class="scalable"></rect>
+						<rect x="100" y="0" width="2" height="16" id="scaler" class="scalable"></rect>
+					</svg>
+					<span id="scalevalue">4km</span>
+					<!--<svg width="50" height="16" id="compass">
+						<rect fill="pink" x="0" y="0" width="50" height="16"></rect>
+					</svg>-->
+					<!--<input type="image" name="da-muss-noch-ein-guter-name-rein" src="http://placekitten.com/20/20" />-->
 					<output for="zoomlevel" form="viewpreferences"></output>
-				</fieldset>
+				</section>
 			</form>
 		</aside>
 		<section id="mapcontainer">
