PHP-Scripte versehen jetzt mit Hilfe der XSLs die SVG-Groups mit passenden IDs
fertige SVGs sind noch nicht vollständig auf diesen neuen Standard
angepasst (siehe svg.html)

--- a/svg.html
+++ b/svg.html
@@ -8,7 +8,7 @@
 <meta http-equiv="pragma" content="no-cache">
 <style type="text/css">
 table {
-	width: 70%;
+	width: 60%;
 }
 </style>
 </head>
@@ -29,14 +29,15 @@ table {
 					<li><a href="./backend/transformation/steffen/php/transform.php?l=c4">Suburbs</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/transformation/steffen/php/transform.php?l=b">Bounds Ba-Wü</a>
-					<li><a href="./backend/transformation/steffen/php/transform.php?l=b1">Counties (Kreisgrenzen)</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=b">Federal States</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=b1">Counties</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/transformation/steffen/php/transform.php?l=m">Motorways</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=s">Motorways</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/transformation/steffen/php/transform.php?l=r">Rivers</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=w">Rivers</a>
+					<li><a href="./backend/transformation/steffen/php/transform.php?l=w1">Lakes</a>
 				</ul>
 			</td>
 			<td>
@@ -48,14 +49,15 @@ table {
 					<li><a href="./backend/svgs/cities/suburbs.svg">Suburbs</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/svgs/bounds/bawubounds.svg">Bounds Ba-Wü</a>
-					<li><a href="./backend/svgs/bounds/counties.svg">Counties (Kreisgrenzen)</a>
+					<li><a href="./backend/svgs/bounds/bawubounds.svg">Federal States</a>
+					<li><a href="./backend/svgs/bounds/counties.svg">Counties</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/svgs/streets/motorways.svg">Motorways</a>
+					<li><a href="./backend/svgs/streets/motorways.svg">Motorways*</a>
 				</ul>
 				<ul>
 					<li><a href="./backend/svgs/waters/rivers.svg">Rivers</a>
+					<li><a href="./backend/svgs/waters/lakes.svg">Lakes*</a>
 				</ul>
 
 			</td>
@@ -64,5 +66,7 @@ table {
 	<br />
 	<h3>Scripte</h3>
 	<a href="./backend/transformation/steffen/php/svg_market.php">SVG_Market</a>
+	<br />
+	* bedeutet, dass die SVG noch nicht die neuen Group-IDs besitzt
 </body>
 </html>
