UI für Layer-Liste
Grund-UI für die Layer-Liste.

--- a/index.html
+++ b/index.html
@@ -40,16 +40,8 @@
 					<li class="active">Ansicht 2</li>
 					<li>Ansicht 3</li>	
 				</ul>
-				<fieldset id="wurschd">
+				<fieldset id="visibilities">
 					<legend>Sichtbarkeiten</legend>
-					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
-					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
-					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
-					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
-					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
-					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
-					<p><input type="checkbox" name="showBla" id="showBla" /><label for="showBla">Sehenswürdigkeiten</label></p>
-					<p><input type="checkbox" name="showFasel" id="showFasel" /><label for="showFasel">Bla fasel blubber</label></p>
 				</fieldset>
 				<section>
 					<svg width="102" height="16" id="mapscale">
