--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 			</form>
 		</aside>
 		<section id="mapcontainer">
+			<svg width="1000" height="1000"><!-- Defs clientseitig? -->
+			</svg>
 		</section>
 	</body>
 </html>
