Vorgefertigte SVGs haben jetzt ALLE die neuen Group-IDs und sind zudem deutlich detailierter

--- a/svg.html
+++ b/svg.html
@@ -67,6 +67,6 @@ table {
 	<h3>Scripte</h3>
 	<a href="./backend/transformation/steffen/php/svg_market.php">SVG_Market</a>
 	<br />
-	* bedeutet, dass die SVG noch nicht die neuen Group-IDs besitzt
+	<br /> * bedeutet, dass die SVG noch nicht die neuen Group-IDs besitzt
 </body>
 </html>
