--- a/svg.html
+++ b/svg.html
@@ -49,15 +49,15 @@ table {
 					<li><a href="./backend/svgs/cities/suburbs.svg">Suburbs</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/svgs/bounds/bawubounds.svg">Federal States</a>
+					<li><a href="./backend/svgs/bounds/federal.svg">Federal States</a>
 					<li><a href="./backend/svgs/bounds/counties.svg">Counties</a>
 				</ul>
 				<ul>
-					<li><a href="./backend/svgs/streets/motorways.svg">Motorways*</a>
+					<li><a href="./backend/svgs/streets/motorways.svg">Motorways</a>
 				</ul>
 				<ul>
 					<li><a href="./backend/svgs/waters/rivers.svg">Rivers</a>
-					<li><a href="./backend/svgs/waters/lakes.svg">Lakes*</a>
+					<li><a href="./backend/svgs/waters/lakes.svg">Lakes</a>
 				</ul>
 
 			</td>
@@ -66,7 +66,5 @@ table {
 	<br />
 	<h3>Scripte</h3>
 	<a href="./backend/transformation/steffen/php/svg_market.php">SVG_Market</a>
-	<br />
-	<br /> * bedeutet, dass die SVG noch nicht die neuen Group-IDs besitzt
 </body>
 </html>
