Verknüpfung der Maßstabs-UI mit tatsächlichem Maßstab der Karte
Aus den Koordinaten der Karte wird nun der Maßstab berechnet. Basiert auf Umrechnungsformel von Wikipedia. Kann Fehler enthalten.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<rect x="76" y="4" width="2" height="8" class="scalable"></rect>
 						<rect x="100" y="0" width="2" height="16" id="scaler" class="scalable"></rect>
 					</svg>
-					<span id="scalevalue">4km</span>
+					<span id="scalevalue"></span>
 					<!--<svg width="50" height="16" id="compass">
 						<rect fill="pink" x="0" y="0" width="50" height="16"></rect>
 					</svg>-->
