--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Die Karte</title>
 		<link rel="stylesheet" href="styles/main.css" />
 		<script type="application/javascript" src="scripts/map.js"></script>
+		<script type="application/javascript" src="scripts/filter.js"></script>
 		<meta charset="utf-8" />
 	</head>
 	<body>
