--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
 						<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
 						<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
-						<button title="Suchen" class="rightside" id="searchbutton"><img src="images/search.svg" alt="Suchen" height="15" /></button>
+						<button title="Suchen" class="rightside" id="searchbutton" accesskey="f"><img src="images/search.svg" alt="Suchen" height="15" /></button>
 					</section>
 					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
 				</nav>
