--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<aside>
 			<section id="flags">
 				<nav id="toolbar">
-					<button title="Route oder Punkt hinzufügen"><img src="images/add.svg" alt="Route oder Punkt hinzufügen" height="15" /></button>
+					<button title="Route oder Punkt hinzufügen" accesskey="a"><img src="images/add.svg" alt="Route oder Punkt hinzufügen" height="15" /></button>
 					<section class="group">
 						<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
 						<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
@@ -19,6 +19,7 @@
 						<button title="Suchen" class="rightside" id="searchbutton" accesskey="f"><img src="images/search.svg" alt="Suchen" height="15" /></button>
 					</section>
 					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
+					<p id="newFlagTooltip">Auf die Karte klicken, um Ort hinzuzufügen</p>
 				</nav>
 				<div class="container">
 					<h1>Strecken</h1>
