UI für verschiedene Kartenansichten entfernt
Da nicht genug Daten vorhanden sind, wird die UI für die verschiedenen Ansichten vorübergehend entfernt. Sie ist weiterhin im Branch "Ansichten" enthalten.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,8 @@
 				</div>
 			</section>
 			<form id="viewpreferences" name="viewpreferences">
-				<ul id="choosemap">
-					<li>Ansicht 1</li>
-					<li class="active">Ansicht 2</li>
-					<li>Ansicht 3</li>	
-				</ul>
-				<fieldset id="visibilities">
-					<legend>Sichtbarkeiten</legend>
-				</fieldset>
+				<section id="visibilities">
+				</section>
 				<section>
 					<svg width="102" height="16" id="mapscale">
 						<title>Maßstab</title>
