Trunks- und Primaries-Layer kombiniert
Trunks entfernt

--- a/svg.html
+++ b/svg.html
@@ -33,12 +33,16 @@ table {
 				</ul>
 				<ul>
 					<li><a href="./backend/svgs/streets/motorways.svg">Motorways</a>
+					<li><a href="./backend/svgs/streets/primaries.svg">Primaries</a>
+					<li><a href="./backend/svgs/streets/secondaries.svg">Secondaries</a>
+					<li><a href="./backend/svgs/streets/tertiaries.svg">Tertiaries</a>
 				</ul>
 				<ul>
 					<li><a href="./backend/svgs/waters/rivers.svg">Rivers</a>
-					<li><a href="./backend/svgs/waters/lakes.svg">Lakes</a>
+					<li><a href="./backend/svgs/waters/canals.svg">Canals</a>
+					<li><a href="./backend/svgs/waters/namedLakes.svg">Named Rivers</a>
+					<li><a href="./backend/svgs/waters/allLakes.svg">All Lakes</a>
 				</ul>
-
 			</td>
 		</tr>
 	</table>
