--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
 		</aside>
 		<section id="mapcontainer">
 			<svg width="1000" height="1000"><!-- Defs clientseitig? -->
+				<defs>
+				<g id="pin">
+				<path d="M 0 0 q -15 -155 -100 -175 l 200 000 q -85 20 -100 175" stroke="black" stroke-width="5" fill="silver" />
+				<ellipse cx="0" cy="-200" rx="120" ry="45" style="fill:grey;stroke:black;stroke-width:5"/>
+				<ellipse cx="0" cy="-225" rx="90" ry="30" style="fill:grey;stroke:black;stroke-width:5"/>
+				<ellipse cx="0" cy="-250" rx="60" ry="20" style="fill:grey;stroke:black;stroke-width:5"/>
+				<ellipse cx="0" cy="-270" rx="30" ry="10" style="fill:grey;stroke:black;stroke-width:5"/>			
+				</g>			
+				</defs>
 			</svg>
 		</section>
 	</body>
