Verknüpfung zwischen Pin und Liste verbessert
Wird über ein Listenelement gefahren, wird der entsprechende Pin auf der Karte hervorgehoben und umgekehrt.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<aside>
-			<section id="flags">
+			<section id="flaglist">
 				<nav id="toolbar">
 					<button title="Route oder Punkt hinzufügen" accesskey="a"><img src="images/add.svg" alt="Route oder Punkt hinzufügen" height="15" /></button>
 					<section class="group">
