Backend-Struktur angepasst
php scripte liegen jetzt in

"backend/php/"

(alt: "backend/transformation/steffen/php/")

--- a/svg.html
+++ b/svg.html
@@ -48,6 +48,6 @@ table {
 	</table>
 	<br />
 	<h3>Scripte</h3>
-	<a href="./backend/transformation/steffen/php/svg_market.php">SVG_Market</a>
+	<a href="./backend/php/svg_market.php">SVG_Market</a>
 </body>
 </html>
