--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		<section id="mapcontainer">
 			<svg width="1000" height="1000"><!-- Defs clientseitig! -->
 				<defs>
+				    <clippath id="borderClip">
+				    </clippath>
 					<g id="pin">
 						<path d="M 0 0 q -15 -155 -100 -175 l 200 000 q -85 20 -100 175" stroke="black" stroke-width="5" fill="silver" />
 						<ellipse cx="0" cy="-200" rx="120" ry="45" style="fill:grey;stroke:black;stroke-width:5" />
