allLakes Layer entwickelt sich zuuu…. unnamedLakes Layer!
die beiden lakes layer haben jetzt nicht mehr doppelte Daten

--- a/svg.html
+++ b/svg.html
@@ -16,7 +16,8 @@ table {
 	<h1>Verfügbare SVGs</h1>
 	<table>
 		<tr>
-			<td><h3>Vorgefertigt</h3></td>
+			<td><h3>SVG-Datei</h3></td>
+			<td><h3>SVG-Market</h3></td>
 		</tr>
 		<tr>
 			<td>
@@ -27,27 +28,68 @@ table {
 					<li><a href="./backend/svgs/cities/hamlets.svg">Hamlets</a>
 					<li><a href="./backend/svgs/cities/suburbs.svg">Suburbs</a>
 				</ul>
+			</td>
+			<td>
+				<ul>
+					<li><a href="./backend/php/svg_market.php?a=c">Cities</a>
+					<li><a href="./backend/php/svg_market.php?a=c1">Towns</a>
+					<li><a href="./backend/php/svg_market.php?a=c2">Villages</a>
+					<li><a href="./backend/php/svg_market.php?a=c3">Hamlets</a>
+					<li><a href="./backend/php/svg_market.php?a=c4">Suburbs</a>
+				</ul>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				<ul>
 					<li><a href="./backend/svgs/bounds/federal.svg">Federal States</a>
 					<li><a href="./backend/svgs/bounds/counties.svg">Counties</a>
 				</ul>
+			</td>
+			<td>
+				<ul>
+					<li><a href="./backend/php/svg_market.php?a=b">Federal States</a>
+					<li><a href="./backend/php/svg_market.php?a=b1">Counties</a>
+				</ul>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				<ul>
 					<li><a href="./backend/svgs/streets/motorways.svg">Motorways</a>
 					<li><a href="./backend/svgs/streets/primaries.svg">Primaries</a>
 					<li><a href="./backend/svgs/streets/secondaries.svg">Secondaries</a>
 					<li><a href="./backend/svgs/streets/tertiaries.svg">Tertiaries</a>
 				</ul>
+			</td>
+			<td>
+				<ul>
+					<li><a href="./backend/php/svg_market.php?a=s">Motorways</a>
+					<li><a href="./backend/php/svg_market.php?a=s1">Primaries</a>
+					<li><a href="./backend/php/svg_market.php?a=s2">Secondaries</a>
+					<li><a href="./backend/php/svg_market.php?a=s3">Tertiaries</a>
+				</ul>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				<ul>
 					<li><a href="./backend/svgs/waters/rivers.svg">Rivers</a>
 					<li><a href="./backend/svgs/waters/canals.svg">Canals</a>
-					<li><a href="./backend/svgs/waters/namedLakes.svg">Named Rivers</a>
-					<li><a href="./backend/svgs/waters/allLakes.svg">All Lakes</a>
+					<li><a href="./backend/svgs/waters/namedLakes.svg">Named Lakes</a>
+					<li><a href="./backend/svgs/waters/unnamedLakes.svg">Unnamed Lakes</a>
+				</ul>
+			</td>
+			<td>
+				<ul>
+					<li><a href="./backend/php/svg_market.php?a=w">Rivers</a>
+					<li><a href="./backend/php/svg_market.php?a=w1">Canals</a>
+					<li><a href="./backend/php/svg_market.php?a=w2">Named Lakes</a>
+					<li><a href="./backend/php/svg_market.php?a=w3">Unnamed Lakes</a>
 				</ul>
 			</td>
 		</tr>
 	</table>
 	<br />
-	<h3>Scripte</h3>
-	<a href="./backend/php/svg_market.php">SVG_Market</a>
 </body>
 </html>
