Sauberere Einbindung der Karte (#14)
Defs werden dynamisch zusammengefasst, Meta-Informationen entfernt und die Attribute genauer vergeben.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</form>
 		</aside>
 		<section id="mapcontainer">
-			<svg width="1000" height="1000" id="map"><!-- Defs clientseitig! -->
+			<svg width="1000" height="1000" id="map">
 				<defs>
 					<filter id="dropshadow">
 				    	<feGaussianBlur result="blurOut" in="SourceAlpha" stdDeviation="2" />
