--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 				<nav id="toolbar">
 					<button title="Route oder Punkt hinzufügen" accesskey="a"><img src="images/add.svg" alt="Route oder Punkt hinzufügen" height="15" /></button>
 					<section class="group">
-						<button title="Sichern" class="rightside"><img src="images/save.svg" alt="Sichern" height="15" /></button>
-						<button title="Exportieren" class="rightside"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
-						<button title="Importieren" class="rightside"><img src="images/import.svg" alt="Importieren" height="15" /></button>
+						<button title="Sichern" class="rightside" accesskey="s"><img src="images/save.svg" alt="Sichern" height="15" /></button>
+						<button title="Exportieren" class="rightside" accesskey="e"><img src="images/export.svg" alt="Exportieren" height="15" /></button>
+						<button title="Importieren" class="rightside" accesskey="i"><img src="images/import.svg" alt="Importieren" height="15" /></button>
 						<button title="Suchen" class="rightside" id="searchbutton" accesskey="f"><img src="images/search.svg" alt="Suchen" height="15" /></button>
 					</section>
 					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
