Verbesserte Usability durch Tooltips + Cursor (#59)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<button title="Suchen" class="rightside" id="searchbutton"><img src="images/search.svg" alt="Suchen" height="15" /></button>
 					</section>
 					<input type="search" name="searchField" id="searchField" placeholder="Suchen" />
-					<p id="newFlagTooltip">Auf die Karte klicken, um Ort hinzuzufügen</p>
+					<p id="newFlagTooltip">Auf die Karte klicken, um Punkt hinzuzufügen</p>
 				</nav>
 				<div class="container">
 					<h1>Strecken</h1>
